# nix-templates

./: flake.nix
.claude/: settings.local.json
templates/c/c_playground/: .clang-format  .clang-tidy  .gitignore  COMPILATION_GUIDE.md  Makefile  flake.nix
templates/c/c_playground/src/: main.c
templates/cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile  readme.org
templates/cpp-reference/: .gitignore  GEMINI.md
templates/cpp-reference/nix/: treefmt.nix
templates/cpp-reference/src/: main.cpp
templates/cpp/benchmark/: main.cpp
templates/cpp/src/: main.cpp
templates/cpp/test/: test_main.cpp
templates/haskell/: .gitignore  CHANGELOG.org  README.org  flake.nix  project.cabal
templates/haskell/basic/: LICENSE
templates/haskell/basic/app/: Main.hs
templates/haskell/basic/bench/: Bench.hs
templates/haskell/basic/test/: LibSpec.hs  Spec.hs
templates/haskell/nix/: hix.nix
templates/haskell/scratch/: .gitignore  LICENSE  README.md  flake.nix  fourmolu.yaml  scratch.cabal
templates/haskell/scratch/app/: Main.hs
templates/haskell/scratch/bench/: Main.hs
templates/haskell/scratch/src/: MyLib.hs
templates/haskell/scratch/test/: Main.hs
templates/haskell/src/: Lib.hs
templates/python/: flake.nix
templates/rust/: Cargo.toml  flake.nix  rust-toolchain.toml
templates/rust-crane/: .gitignore  README.md  flake.nix
templates/rust-four/: .envrc  .gitignore  Cargo.toml  README.md  bacon.toml  copier.yaml  deny.toml  flake.nix  justfile  rustfmt.toml  treefmt.toml
templates/rust-four/crates/rrrr/: Cargo.toml
templates/rust-four/crates/rrrr-lib/: Cargo.toml
templates/rust-four/crates/rrrr-lib/benches/: bench.rs
templates/rust-four/crates/rrrr-lib/src/: lib.rs
templates/rust-four/crates/rrrr/src/: main.rs
templates/rust-four/nix/: checks.nix  devshell.nix  docker.nix  packages.nix  rust.nix  treefmt.nix
templates/rust-four/scripts/: rename-project.sh
templates/rust/.cargo/: config.toml
templates/rust/src/: main.rs
templates/simple-cpp/: .gitignore  CMakeLists.txt  flake.nix  generate_clangd.sh  justfile
templates/zig/: .gitignore  build.zig  flake.nix
templates/zig/src/: lib.zig  main.zig
