cabal-version:      3.14
name:               scratch
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Wong Ding Feng
maintainer:         dingfengwong@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: GHC2024

executable scratch
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        scratch
    hs-source-dirs:   app
    default-language: GHC2024

test-suite scratch-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: GHC2024
    build-depends:
        base ^>=4.20.2.0,
        scratch

benchmark scratch-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    default-language: GHC2024
    build-depends:
        base ^>=4.20.2.0,
        tasty-bench,
        scratch
    ghc-options:      -O2 -threaded