[package]
name = "rrrr"
description = "A blazing fast CLI application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rrrr"
path = "src/main.rs"

[dependencies]
rrrr-lib.workspace = true

# Async runtime
tokio.workspace = true

# CLI parsing
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Tokio console (optional, for async debugging)
console-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable tokio-console support
tokio-console = []

